# JaxMaterials

./: .gitignore  LICENSE  Readme.md  Readme.me  pyproject.toml
cuda/: CMakeLists.txt
cuda/src/: CMakeLists.txt  common.cc  common.hh  derivatives.cu  derivatives.hh  driver.cc  driver.cu  fourier.cu  fourier.hh  fourier_solve.cu  fourier_solve.hh  lippmann_schwinger.cu  lippmann_schwinger.hh  profile.cu  profile.hh  test.cu
cuda/src/tests/: test_derivatives.hh  test_fourier.hh  test_fourier_solve.hh  test_lippmann_schwinger.hh
doc/: anisotropic.py  anisotropic_acoustic_matrix.tex  anisotropic_elasticity.tex  anisotropic_fourier_matrix.tex  anisotropic_stress_strain.tex  isotropic_acoustic_matrix.tex  linear_elasticity.bib  linear_elasticity.tex
src/: driver.py  generate_data.py  linear_elasticity.py  train.py
src/jaxmaterials/: common.py  data_generator.py  distributions_fibres.py  libfibres.cc  linear_elasticity.py  utilities.py
src/jaxmaterials/data/: data.py
src/jaxmaterials/solver/: derivatives.py  fourier.py  lippmann_schwinger.py
tests/: phasefield.py  test_lippmann_schwinger.py  test_yc.py  xuanchen.py
