[build-system]
requires = ["setuptools >= 80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxmaterials"
version = "1.0"
dependencies = [
    "numpy",
    "matplotlib",
    "jax",
    "tqdm",
    "h5py",
    "torch",
]
requires-python = ">=3.12"
authors = [
  {name = "Eike Mueller", email = "e.mueller@bath.ac.uk"},
]
maintainers = [
  {name = "Eike Mueller", email = "e.mueller@bath.ac.uk"},
]
description = "Jax implementation of solvers in linear elasticity."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "machine learning",
  "composite materials",
  "Lippmann Schwinger",
  "Fourier methods"]
classifiers = [
    "Programming Language :: Python :: 3"
]
[project.urls]
Repository = "https://bitbucket.org/em459/jaxmaterials"